--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar  2 09:37:05 1999  Robert Lipe  <robertlipe@usa.net>
+
+	* Makefile.in (MAKEINFO): Use makeinfo built from sibling
+	tree when available.
+
 Tue Mar  2 10:12:48 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* alpha.c (alpha_cpu_name, alpha_cpu_string, alpha_tp_string,
