* tree.c (save_tree_status): Don't treat functions with no context 	as nested.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25534 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar  2 07:44:56 1999  Mark Mitchell  <mark@markmitchell.com>
+
+	* tree.c (save_tree_status): Don't treat functions with no context
+	as nested.
+
 Tue Mar  2 09:37:05 1999  Robert Lipe  <robertlipe@usa.net>
 
 	* Makefile.in (MAKEINFO): Use makeinfo built from sibling
