--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-02  Nick Clifton  <nickc@cygnus.com>
+
+	* config.sub: Rename CYGNUS LOCAL to EGCS LOCAL
+
 Sun Feb 28 02:20:00 1999  Geoffrey Noer  <noer@cygnus.com>
 
 	* config.sub: Check for "cygwin*" rather than "cygwin32*"
