fix news-doc item
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25543 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -3,6 +3,10 @@
 	* g77.texi (Bug Reporting): Clarify whether to use -E.
 	Clarify other instructions.
 
+1999-02-26  Craig Burley  <craig@jcb-sc.com>
+
+	* news.texi: Clarify IOSTAT= fix.
+
 1999-02-25  Richard Henderson  <rth@cygnus.com>
 
 	* lang-specs.h: Define __FAST_MATH__ when appropriate.
