fix STAT, LSTAT, FSTAT, DATE_AND_TIME docs
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25544 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -5,6 +5,17 @@
 
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
 
+	* intdoc.in (STAT_func, STAT_subr,
+	FSTAT_func, FSTAT_subr, LSTAT_func, LSTAT_subr):
+	Properly order array elements.  Specify N/A return values.
+
+1999-02-26  Craig Burley  <craig@jcb-sc.com>
+
+	* intdoc.in (DATE_AND_TIME): Explain that VALUES(7) holds
+	seconds, and VALUES(8), therefore, milliseconds.
+
+1999-02-26  Craig Burley  <craig@jcb-sc.com>
+
 	* news.texi: Clarify IOSTAT= fix.
 
 1999-02-25  Richard Henderson  <rth@cygnus.com>
