--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -3,6 +3,10 @@
 	* g77.texi (Bug Reporting): Clarify whether to use -E.
 	Clarify other instructions.
 
+1999-02-27  Craig Burley  <craig@jcb-sc.com>
+
+	* lang-specs.h: Fix specs to pass `-ax' as well as `-a' option.
+
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
 
 	* intdoc.in (STAT_func, STAT_subr,
