fix references for HTML, etc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25548 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar  3 00:38:42 1999  Craig Burley  <craig@jcb-sc.com>
+
+	* bugs.texi, news.texi: Conditionalize cross-references
+	on non-html processing, providing temporary HTML "links".
+
+	* g77.texi: Fix up a reference.
+
 Wed Mar  3 00:12:31 1999  Craig Burley  <craig@jcb-sc.com>
 
 	* news.texi, bugs.texi: Delete fixed bugs, make one
