doc changes from Dave Love left over
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25549 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar  3 00:43:49 1999  Craig Burley  <craig@jcb-sc.com>
+
+	* g77.texi: Add remaining changes pending from Dave Love.
+
 Wed Mar  3 00:38:42 1999  Craig Burley  <craig@jcb-sc.com>
 
 	* bugs.texi, news.texi: Conditionalize cross-references
