Fix IDATE (VXT) intrinsic
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25551 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,9 @@
+1999-03-03  Craig Burley  <craig@jcb-sc.com>
+
+	* libU77/vxtidate_.c (G77_vxtidate_0): Truncate
+	year to last two digits (i.e. modulo 100), as per
+	documentation and (documented) Y2K non-compliance.
+
 1999-02-20  Craig Burley  <craig@jcb-sc.com>
 
 	From Krister Walfridsson <cato@df.lth.se>:
