--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar  3 00:57:56 1999  Craig Burley  <craig@jcb-sc.com>
+
+	* news.texi: IDATE (VXT) fixed to return year as 0..99.
+
 Wed Mar  3 00:43:49 1999  Craig Burley  <craig@jcb-sc.com>
 
 	* g77.texi: Add remaining changes pending from Dave Love.
