--- a/gcc/f/news.texi
+++ b/gcc/f/news.texi
@@ -65,6 +65,17 @@ somewhat more difficult.
 @heading In @code{egcs} 1.2:
 @itemize @bullet
 @item
+Fix the @code{IDate} Intrinsic (VXT)
+so the returned year is in the documented, non-Y2K-compliant range
+of 0--99,
+instead of being returned as 100 in the year 2000.
+
+@ifnothtml
+@xref{IDate Intrinsic (VXT)},
+for more information.
+@end ifnothtml
+
+@item
 Fix @code{g77} so it no longer crashes when compiling
 I/O statements using keywords that define @code{INTEGER} values,
 such as @samp{IOSTAT=@var{j}},
