--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 1999-03-02  Mark Mitchell  <mark@markmitchell.com>
 
+	* cp-tree.h (determine_specialization): Don't declare.
+	* pt.c (determine_specialization): Make it static.  Eliminate
+	complain parameter.  Note that decl is always non-NULL now, and
+	simplify accordingly.
+
 	* decl.c (maybe_push_to_top_level): Always call
 	push_cp_function_context.
 	(pop_from_top_level): Always call pop_cp_function_context.
