describe a few more bugs; remove fixed bugs
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25556 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/f/ChangeLog
+++ b/egcs_1_1_branch/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-03  Craig Burley  <craig@jcb-sc.com>
+
+	* bugs.texi: Update with latest bug-fixes from 1.2.
+	Remove fixed bugs.
+
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
 
 	* news.texi: List fixes to Date_and_Time and LStat, plus
