* flow.c (delete_unreachable_blocks): Mark blocks as they         are put on to the worklist, not as they are taken off.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25584 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar  4 15:00:35 1999  Richard Henderson  <rth@cygnus.com>
+
+	* flow.c (delete_unreachable_blocks): Mark blocks as they
+	are put on to the worklist, not as they are taken off.
+
 Thu Mar  4 00:05:44 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* function.c (current_function_has_computed_jump): Remove duplicate
