IDATE Intrinsic (VXT) Year 2000 (Y2K) Fix
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@25595 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/egcs_1_1_branch/gcc/f/ChangeLog
+++ b/egcs_1_1_branch/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+1999-03-05  Craig Burley  <craig@jcb-sc.com>
+
+	* news.texi: IDATE (VXT) fixed to return year as 0..99.
+  
 1999-03-03  Craig Burley  <craig@jcb-sc.com>
 
 	* bugs.texi: Update with latest bug-fixes from 1.2.
