* sh.h (SLOW_BYTE_ACCESS): Define to 1. 	(BOOL_TYPE_SIZE): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25600 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar  5 19:26:23 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* sh.h (SLOW_BYTE_ACCESS): Define to 1.
+	(BOOL_TYPE_SIZE): Define.
+
 Fri Mar  5 02:14:54 1999  John Wehle  (john@feith.com)
 
 	* function.c (assign_stack_temp_for_type): Abort
