--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar  5 11:36:11 1999  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.c (arm_override_options): Change default target
+	cpu selection so that enabling TARGET_APCS_32 does not override
+	default target CPU.
+
 Fri Mar  5 19:26:23 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* sh.h (SLOW_BYTE_ACCESS): Define to 1.
