--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar  5 13:20:39 1999  Richard Henderson  <rth@cygnus.com>
+
+	* Makefile.in: Delete .flow2 debugging files.
+
 Fri Mar  5 11:36:11 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* config/arm/arm.c (arm_override_options): Change default target
