--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 25 21:52:54 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
+
+	* reload.c (find_reloads_subreg_address): Actually create the USE
+	for the register, not the new memory location.
+
 Fri Mar  5 21:41:07 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* reload1.c (emit_reload_insns): If pseudo that can't be replaced
